<package>
	<name>beeclickarm_messages</name>
	<version>0.0.1</version>
	<description>ROS message definition for beeclickarm services</description>
	<maintainer email="matena@d3s.mff.cuni.cz">Vladimir Matena</maintainer>	
	<license>BSD</license>	

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>message_generation</build_depend>

	<build_depend>std_msgs</build_depend>
  	<build_depend>message_generation</build_depend>
	<run_depend>message_runtime</run_depend>
	<run_depend>std_msgs</run_depend>
</package>
